--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,14 @@
         }
     ],
     "require": {
-        "php": "8.2.*",
-        "orchestra/testbench": "^8.0"
+        "php": "8.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
-            "CodeDistortion\\PhpUnitBug\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
+            "CodeDistortion\\PhpUnitBug\\": "src/",
             "CodeDistortion\\PhpUnitBug\\Tests\\": "tests"
         }
     }
